# OpenMP_Parallel_Searching_Algorithm

./: CMakeLists.txt  generate_image_py.txt  img1.tiff  main.cpp  readme.md
